# gislab-q5-building-id

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
data/: README.md
data-tmp/: README.md
data-tmp/plateau/: convert-citygml-to-geopackage.sh  download-and-extract-citygml.sh
data-tmp/plateau/citygml/: bldg_lod0_foot_print.gfs
data/plateau/citygml/: bldg_lod0_roof_edge.gfs
data/plateau/geojson/: 13100_tokyo_2023.geojson
docs/: index.md
docs/data/plateau/_scripts/: convert-citygml-to-geopackage.sh  download-and-extract-citygml.sh
docs/data/plateau/geojson/: 13100_tokyo_2023.geojson
docs/data/plateau/geopackage/: 13100_tokyo_2022.gpkg  13100_tokyo_2023.gpkg
docs/notebooks/: check_geohash_size.ipynb  geohash_id.ipynb
docs/results/: tokyo_2023_geohash.geojson
notebooks/: check_geohash_size.ipynb  detect_changes.ipynb  main.ipynb
notebooks/check_geohash_size/: index.html
notebooks/geohash_id/: index.html
results/: tokyo_2022_python_geohash.csv  tokyo_2023_geohash.csv  tokyo_2023_python_geohash.csv
