[project]
name = "gislab-q5-building-id"
version = "0.1.0"
description = "地理空間情報課ラボ - Q5:建物へのIDの付番 の アイデア"
authors = [
    {name = "Ko Nagase",email = "nagase@georepublic.co.jp"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "leafmap[maplibre] (>=0.42.9,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
geopandas = "^1.0.1"
pandas = "^2.2.3"
shapely = "^2.0.6"
matplotlib = "^3.10.0"
rasterio = "^1.4.3"
contextily = "^1.6.2"
python-geohash = "^0.8.5"
jupyterlab = "^4.3.4"
jupyterlab-code-formatter = "^3.0.2"
black = "^24.10.0"
isort = "^5.13.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.1"
mkdocs-exclude = "^1.0.2"
markdown-exec = "^1.10.0"
mkdocs-jupyter = "^0.25.1"
pymdown-extensions = "^10.14.2"

