[project]
name = "gislab-q5-building-id"
version = "0.1.0"
description = "地理空間情報課ラボ - Q5:建物へのIDの付番 の アイデア"
authors = [
    {name = "Ko Nagase",email = "nagase@georepublic.co.jp"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
geopandas = "^1.0.1"
pandas = "^2.2.3"
shapely = "^2.0.6"
matplotlib = "^3.10.0"
rasterio = "^1.4.3"
python-geohash = "^0.8.5"
leafmap = "^0.42.9"
pydeck = "^0.9.1"
fiona = "^1.10.1"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.3.5"
jupyterlab-code-formatter = "^3.0.2"
black = "^25.1.0"
isort = "^6.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.1"
mkdocs-exclude = "^1.0.2"
markdown-exec = "^1.10.0"
mkdocs-jupyter = "^0.25.1"
pymdown-extensions = "^10.14.2"
